styles/home.module.scss
.intro {
    padding-top: 50px;
    margin-bottom: 50px;
    
    h1{
        max-width: 600px;
        font-size: 45px;
    }
}

p.lead {
    font-size: 150%;
}

.selectedApps{
    padding-bottom: 20px;
    margin-top: 50px;
}

@media(max-width: 590px){
    .intro{
        padding-top: 0px !important;

        textarea{
            width: auto !important;
        }
    }
}

h4.commentsHeader {
    font-size: 20px;
    margin-top: 40px;
    margin-bottom: 5px;
    opacity: 0.75;
}

